# online-accounts-api

./: .bzrignore  CMakeLists.txt
cmake/: FindGMock.cmake
debian/: changelog  control  copyright  libonline-accounts-daemon-dev.install  libonline-accounts-daemon1.install  libonline-accounts-daemon1.symbols  libonline-accounts-qt-dev.install  libonline-accounts-qt1.install  libonline-accounts-qt1.symbols  online-accounts-daemon.install  qml-module-ubuntu-onlineaccounts2-doc.install  rules
doc/: CMakeLists.txt  ubuntu-onlineaccounts2.qdocconf
src/daemon/: CMakeLists.txt  aacontext.cpp  aacontext.h  access_request.cpp  access_request.h  account_info.h  async_operation.cpp  async_operation.h  authentication_request.cpp  authentication_request.h  authenticator.cpp  authenticator.h  client_registry.cpp  client_registry.h  com.ubuntu.OnlineAccounts.Manager.service.in  dbus_constants.h  inactivity_timer.cpp  inactivity_timer.h  main.cpp  manager.cpp  manager.h  manager.xml  manager_adaptor.cpp  manager_adaptor.h  online_accounts.py  state_saver.cpp  state_saver.h
src/lib/OnlineAccounts/: AuthenticationData  CMakeLists.txt  OnlineAccountsQt.pc.in  PendingCall  account.cpp  account.h  account_info.cpp  account_info.h  account_p.h  authentication_data.cpp  authentication_data.h  authentication_data_p.h  authentication_reply.cpp  dbus_constants.h  dbus_interface.cpp  dbus_interface.h  error.cpp  error.h  error_p.h  global.h  manager.cpp  manager.h  manager_p.h  pending_call.cpp  pending_call.h  pending_call_p.h  request_access_reply.cpp  service.cpp  service.h
src/lib/OnlineAccountsDaemon/: CMakeLists.txt  OnlineAccountsDaemon.pc.in  async_operation.cpp  authentication_request.cpp  authenticator.cpp  authenticator.h  client_registry.cpp  com.ubuntu.OnlineAccounts.Manager.xml  dbus_constants.h  global.h  i18n.cpp  i18n.h  manager.cpp  manager.h  manager_adaptor.cpp  manager_adaptor.h  state_saver.cpp
src/lib/OnlineAccountsQt/: manager.h
src/lib/Ubuntu/OnlineAccounts.2/: CMakeLists.txt  account.cpp  account.h  account_model.cpp  account_model.h  authentication_data.cpp  authentication_data.h  plugin.cpp  plugin.h
src/lib/qml_module/: account.h  account_model.cpp  account_model.h  authentication_data.cpp  authentication_data.h  qmldir
tests/: CMakeLists.txt
tests/daemon/functional_tests/: CMakeLists.txt  daemon_interface.cpp  daemon_interface.h  dbus_apparmor.py  fake_dbus_apparmor.h  fake_online_accounts_service.h  fake_signond.h  functional_tests.cpp  online_accounts-service.py  signond.py  test_process.py
tests/daemon/functional_tests/data/: com.ubuntu.OnlineAccounts.Manager.service.in  com.ubuntu.tests_application.application  com.ubuntu.tests_coolshare.service  coolmail.service  missing-provider.service  oauth1auth.service  testsession.conf.in
tests/daemon/mock_template/: CMakeLists.txt  mock_template.cpp
tests/lib/OnlineAccounts/: CMakeLists.txt
tests/lib/OnlineAccounts/functional_tests/: CMakeLists.txt  functional_tests.cpp
tests/lib/OnlineAccounts/tst_authentication_data/: CMakeLists.txt  tst_authentication_data.cpp
tests/lib/qml_module/: CMakeLists.txt  tst_qml_module.cpp
tests/unit/: CMakeLists.txt
tests/unit/unit-test-template/: CMakeLists.txt  unit-test-template.cpp
